--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
   "name": "yalidine-warehouse-sdk",
-  "version": "1.0.0",
-  "main": "src/index.ts",
+  "version": "0.0.2",
   "author": "Mohamed Slimani",
   "license": "MIT",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "commander": "node -r ts-node/register src/commands/index.ts"
   },
   "dependencies": {
     "@badgateway/oauth2-client": "^2.2.4",
-    "@commander-js/extra-typings": "^11.0.0",
     "@types/node": "^20.8.3",
-    "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "commander": "^11.0.0",
+    "@commander-js/extra-typings": "^11.0.0",
+    "@inquirer/prompts": "^3.2.0",
+    "loading-cli": "^1.1.0"
   }
 }
