--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "yalidine-warehouse-sdk",
+  "name": "yalitec-warehouse-sdk",
   "version": "0.0.3",
   "author": "Mohamed Slimani",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "/dist"
-  ],
+  "homepage": "https://github.com/moh-slimani/yalitec-warehouse-sdk",
   "scripts": {
     "commander": "node -r ts-node/register src/commands/index.ts"
   },
@@ -23,5 +21,11 @@
     "commander": "^11.0.0",
     "loading-cli": "^1.1.0",
     "ts-node": "^10.9.1"
+  },
+  "files": [
+    "/dist"
+  ],
+  "repository": {
+    "url": "https://github.com/moh-slimani/yalitec-warehouse-sdk"
   }
 }
