--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "loading-cli": "^1.1.0",
     "ts-node": "^10.9.1"
   },
+  "bin": {
+    "warehouse": "./dist/commands/index.js"
+  },
   "files": [
     "/dist"
   ],
