--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yalitec-warehouse-sdk",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "author": "Mohamed Slimani",
   "license": "MIT",
   "main": "dist/index.js",
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "@badgateway/oauth2-client": "^2.2.4",
-    "@types/node": "^20.8.3",
-    "dotenv": "^16.3.1",
-    "typescript": "^5.2.2",
     "@commander-js/extra-typings": "^11.0.0",
     "@inquirer/prompts": "^3.2.0",
+    "@types/node": "^20.8.3",
     "commander": "^11.0.0",
-    "loading-cli": "^1.1.0"
+    "dotenv": "^16.3.1",
+    "loading-cli": "^1.1.0",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
   },
   "bin": {
-    "warehouse": "node ./dist/commands/index.js"
+    "warehouse": "./dist/commands/index.js"
   },
   "files": [
     "/dist"
