--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yalitec-warehouse-sdk",
-  "version": "0.0.8",
+  "version": "0.0.8-beta",
   "author": "Mohamed Slimani",
   "license": "MIT",
   "main": "dist/index.js",
