--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
   "name": "yalitec-warehouse-sdk",
-  "version": "0.0.10",
+  "version": "1.0.0",
   "author": "Mohamed Slimani",
   "license": "MIT",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/types/index.d.ts",
   "homepage": "https://github.com/moh-slimani/yalitec-warehouse-sdk",
-  "scripts": {
-    "commander": "node -r ts-node/register src/commands/index.ts"
-  },
   "dependencies": {
     "@badgateway/oauth2-client": "^2.2.4",
-    "@commander-js/extra-typings": "^11.0.0",
-    "@inquirer/prompts": "^3.2.0",
     "@types/node": "^20.8.3",
-    "commander": "^11.0.0",
-    "dotenv": "^16.3.1",
-    "loading-cli": "^1.1.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
-  },
-  "bin": {
-    "warehouse": "./dist/commands/index.js"
   },
   "files": [
     "/dist"
