--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "yalitec-warehouse-sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "Mohamed Slimani",
   "license": "MIT",
-  "main": "src/index.ts",
-  "types": "src/types/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "homepage": "https://github.com/moh-slimani/yalitec-warehouse-sdk",
   "dependencies": {
     "@badgateway/oauth2-client": "^2.2.4",
@@ -15,7 +15,8 @@
     "ts-node": "^10.9.1"
   },
   "files": [
-    "src/"
+    "dist/",
+    "src"
   ],
   "repository": {
     "url": "https://github.com/moh-slimani/yalitec-warehouse-sdk"
