--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+../yalitec-warehouse-cli/.env
 .env.development.local
 .env.test.local
 .env.production.local
