--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "name": "yalitec-warehouse-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "Mohamed Slimani",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "description": "consume Yalitec warehouse API using javascript SDK",
   "homepage": "https://github.com/moh-slimani/yalitec-warehouse-sdk",
   "scripts": {
     "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@badgateway/oauth2-client": "^2.2.4",
-    "@types/node": "^20.8.3",
-    "typescript": "^5.2.2"
+    "@badgateway/oauth2-client": "^2.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.8.3",
     "ts-node": "^10.9.1",
-    "tsup": "^7.2.0"
+    "tsup": "^7.2.0",
+    "typescript": "^5.2.2"
   },
   "files": [
     "dist/",
